<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.calculanotas.CalcularNotaActivity">

    <TextView
        android:id="@+id/final_grade_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/final_grade"
        android:textAlignment="center"
        android:textColor="#9C27B0"
        android:textSize="40sp" />

    <ImageView
        android:id="@+id/logo_notas_image_view"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <TextView
        android:id="@+id/nota_final_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/nota_final"
        android:textAllCaps="true"
        android:textColor="@color/ic_launcher_background"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nota_1_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nota_1"
        android:textColor="#9C27B0"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nota_1_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nota_1_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/practicas_laboratorio"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/nota_2_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nota_2"
        android:textColor="#9C27B0"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nota_2_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nota_2_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/primer_avance"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/nota_3_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nota_3"
        android:textColor="#9C27B0"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nota_3_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nota_3_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/segundo_avance"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/nota_4_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nota_4"
        android:textColor="#9C27B0"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nota_4_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nota_4_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/entrega_proyecto"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/calcular_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/calcular" />

</LinearLayout>